--- a/kabum/package.json
+++ b/kabum/package.json
@@ -4,7 +4,8 @@
   "description": "Kabum store scraper. Use this for educational purposes only.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "Thiago Preischadt",
