--- a/kabum/config.json
+++ b/kabum/config.json
@@ -1,5 +1,7 @@
 {
     "filters": ["hardware", "perifericos"],
     "root_url": "https://www.kabum.com.br/",
-    "headless": false
+    "headless": true,
+    "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.169 Safari/537.36",
+    "maxPages": 100
 }
