--- a/kabum/config.json
+++ b/kabum/config.json
@@ -1,5 +1,5 @@
 {
-    "filters": ["hardware", "perifericos"],
+    "filters": ["hardware", "perifericos", "computadores"],
     "root_url": "https://www.kabum.com.br/",
     "headless": true,
     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.169 Safari/537.36",
