--- a/kabum-requests/config.json
+++ b/kabum-requests/config.json
@@ -1,5 +1,4 @@
 {
     "filters": ["perifericos", "hardware", "computadores"],
-    "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.169 Safari/537.36",
-    "maxPages": 100
+    "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.169 Safari/537.36"
 }
