--- a/guiamais-ts/package.json
+++ b/guiamais-ts/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "build": "rm -rf dist && tsc",
     "start": "ts-node src/index.ts",
