--- a/guiamais-ts/package.json
+++ b/guiamais-ts/package.json
@@ -30,9 +30,10 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
-    "express": "^4.18.1",
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12",
-    "csv-writer": "^1.6.0"
+    "csv-writer": "^1.6.0",
+    "express": "^4.18.1",
+    "ts-node": "^10.8.2"
   }
 }
