--- a/guiamais-ts/package.json
+++ b/guiamais-ts/package.json
@@ -32,10 +32,12 @@
     "@tsconfig/node17": "^1.0.1",
     "@types/axios": "^0.14.0",
     "@types/cheerio": "^0.22.31",
+    "@types/express": "^4.17.13",
     "@types/node": "^18.0.3",
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12",
     "csv-writer": "^1.6.0",
+    "express": "^4.18.1",
     "nodemon": "^2.0.19",
     "typescript": "^4.7.4"
   }
