--- a/guiamais-ts/package.json
+++ b/guiamais-ts/package.json
@@ -39,6 +39,7 @@
     "csv-writer": "^1.6.0",
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
+    "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
   }
 }
