--- a/guiamais-ts/package.json
+++ b/guiamais-ts/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "rm -rf dist && tsc",
-    "start": "ts-node src/index.ts",
+    "start": "rm -rf dist && tsc && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
