--- a/guiamais-ts/package.json
+++ b/guiamais-ts/package.json
@@ -34,12 +34,12 @@
     "@types/cheerio": "^0.22.31",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.3",
-    "axios": "^0.27.2",
-    "cheerio": "^1.0.0-rc.12",
     "csv-writer": "^1.6.0",
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
     "ts-node": "^10.8.2",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.12"
   }
 }
